fixed update order status route
